test: Cars 테스트 코드에 설명 추가