@@ -1,11 +1,9 @@
 package racingcar.domain;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import racingcar.utils.RandomUtils;
 import racingcar.utils.StringUtils;
-import racingcar.utils.constant.Constant;
 import racingcar.utils.validation.InputValidation;
 
 public class Cars {
@@ -21,7 +19,7 @@ public class Cars {
     private List<Car> createCars(List<String> carList) {
         return carList.stream()
             .map(car -> new Car(car))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public void move() {
